Fix incorrect stylesheet and script paths in index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybersecurity Labs</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/ui-controls.js"></script>
-    <script src="/js/screenshot-handler.js"></script>
-    <script src="/js/scripts.js"></script>
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/ui-controls.js"></script>
+    <script src="./js/screenshot-handler.js"></script>
+    <script src="./js/scripts.js"></script>
 </head>
 <body>
     <div class="index-header">
@@ -26,5 +26,4 @@
         <li><a href="Lab6/reading-server-logs.html">Reading Server Logs</a></li>
     </ul>
 </body>
-</html>
 </html>
