Refactor HTML structure by removing unnecessary comments and add new lab files for encryption and hashing exercises

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li><a href="Lab5/wireshark-http-https.html">Using Wireshark to Examine HTTP and HTTPS Traffic</a></li>
         <li><a href="Lab5/wireshark-udp-dns.html">Using Wireshark to Examine a UDP DNS Capture</a></li>
         <li><a href="Lab6/reading-server-logs.html">Reading Server Logs</a></li>
+        <li><a href="lab8/lab-encrypt-decrypt-openssl.html">Reading Server Logs</a></li>
+        <li><a href="lab8/lab-hashing-things-out.html">Reading Server Logs</a></li>
     </ul>
 </body>
 </html>
