Add Lab 9: Encrypting and Decrypting Data Using OpenSSL and Snort Firewall Rules
- Created lab-encrypting-decrypting.html with detailed instructions for creating and recovering encrypted zip files using fcrackzip.
- Added snort-firewall-rules-html.html to cover firewall and IDS logs, including setup, monitoring, and rule configuration.
- Updated index.html to include links to the new Lab 9 resources.

--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
         <li><a href="lab8/lab-encrypt-decrypt-openssl.html">Encrypting and Decrypting Data Using OpenSSL</a></li>
         <li><a href="lab8/lab-hashing-things-out.html">Hashing Things Out</a></li>
     </ul>
+
+    <h3>Lab 9</h3>
+    <ul>
+        <li><a href="lab9/lab-encrypting-decrypting.html">Encrypting and Decrypting Data Using OpenSSL</a></li>
+        <li><a href="lab9/snort-firewall-rules-html.html">Snort Firewall Rules</a></li>
+    </ul>
 </body>
 </html>
